YAML/spring-app-deploy.yaml
#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app-deploy
  labels:
    app: spring-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
      - name: spring-app
        image: jeongrae/goorm01:mysql
        ports:
        - containerPort: 8080
        valueFrom:
          configMapKeyRef:
            name: mysql-config
            key: user
        - name: SPRING_DATASOURCE_PASSWORD
          valueFrom:
            secretKeyRef:
              name: mysql-secret
              key: user_password
