YAML/spring-app-svc.yaml
#Service
apiVersion: v1
kind: Service
metadata:
  name: spring-app-svc
  labels:
    app: spring-app
spec:
  selector:
    app: spring-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
